syntax = "proto3";

package peers_touch.model.ai_box.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/peers-labs/peers-touch/station/app/subserver/ai-box/model;model";

// =================================================================
// Service Definition
// =================================================================

service AIBoxService {
  // 创建一个新的聊天会话
  rpc CreateSession(CreateSessionRequest) returns (ChatSession);

  // 列出用户的聊天会话
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);

  // 发送消息（支持一元和流式响应）
  rpc SendMessage(SendMessageRequest) returns (stream ChatMessage);
  
  // 获取会话下的所有消息
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
}

// =================================================================
// Request & Response Messages
// =================================================================

// CreateSession
message CreateSessionRequest {
  string title = 1;
  string description = 2;
  string provider_id = 3;
  string model_name = 4;
  map<string, string> meta = 5;
  string config_json = 6;
}

// ListSessions
message ListSessionsRequest {
  string user_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  string filter = 4;
  string order_by = 5;
}

message ListSessionsResponse {
  repeated ChatSession sessions = 1;
  string next_page_token = 2;
}

// SendMessage
message SendMessageRequest {
  string session_id = 1;
  string topic_id = 2;
  string content = 3;
  repeated MessageAttachment attachments = 4;
  string metadata_json = 5;
  bool stream = 6; // True for streaming response
}

// ListMessages
message ListMessagesRequest {
    string session_id = 1;
    string topic_id = 2;
    int32 page_size = 3;
    string page_token = 4;
}

message ListMessagesResponse {
    repeated ChatMessage messages = 1;
    string next_page_token = 2;
}


// =================================================================
// Core Data Models
// =================================================================

// 聊天会话
message ChatSession {
  string id = 1;
  string title = 2;
  string description = 3;
  string avatar = 4;
  string background_color = 5;
  string provider_id = 6;
  string user_id = 7;
  string model_name = 8;
  bool pinned = 9;
  string group = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
  map<string, string> meta = 13;
  string config_json = 14;
}

// 聊天消息
message ChatMessage {
  string id = 1;
  string session_id = 2;
  string topic_id = 3;
  string model_name = 4;
  string role = 5; // e.g., "user", "assistant", "system"
  string content = 6;
  string error_json = 7;
  repeated MessageAttachment attachments = 8;
  string images_json = 9;
  string metadata_json = 10;
  string plugin_json = 11;
  string tool_calls_json = 12;
  string reasoning_json = 13;
  int64 created_at = 14;
  int64 updated_at = 15;
}

// 消息附件
message MessageAttachment {
  string id = 1;
  string message_id = 2;
  string name = 3;
  int64 size = 4;
  string type = 5;
  string url = 6;
  string metadata_json = 7;
  int64 created_at = 8;
}

// 聊天主题
message ChatTopic {
  string id = 1;
  string session_id = 2;
  string title = 3;
  string description = 4;
  int32 message_count = 5;
  string first_message_id = 6;
  string last_message_id = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
}

// AI 服务提供商
message AiProvider {
  string id = 1;
  string name = 2;
  string peers_user_id = 3;
  int32 sort = 4;
  bool enabled = 5;
  string check_model = 6;
  string logo = 7;
  string description = 8;
  string key_vaults = 9;
  string source_type = 10;
  string settings = 11;
  string config = 12;
  google.protobuf.Timestamp accessed_at = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
}

// 服务提供商的通用配置
message ProviderConfig {
  string api_key = 1;
  string endpoint = 2;
  string proxy_url = 3;
  int32 timeout_seconds = 4;
  int32 max_retries = 5;
}

// AI 模型能力描述
message ModelCapability {
  string model_name = 1;
  bool supports_streaming = 2;
  int32 max_tokens = 3;
  string description = 4;
}

// 访问控制
message AccessControl {
  string user_id = 1;
  repeated string roles = 2;
  map<string, bool> permissions = 3;
  int64 granted_at = 4;
  int64 expires_at = 5;
}